apps/market-data/sin/ui-apps/fees-editor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fees-editor
spec:
  selector:
    matchLabels:
      app: fees-editor
  replicas: 1
  template:
    metadata:
      labels:
        app: fees-editor
    spec:
      serviceAccountName: ui-apps-sa-prod
      containers:
        - name: fees-editor
          image: ghcr.io/alphalab-hq/fees-editor:1.1.2
          resources:
            requests:
              cpu: "100m"
              memory: 100Mi
            limits:
              cpu: "500m"
              memory: 500Mi
          ports:
            - containerPort: 1234
      tolerations:
        - key: node/destiny
          operator: 'Equal'
          value: 'alc-ui'
          effect: 'NoSchedule'
      nodeSelector:
        node/destiny: alc-ui
      imagePullSecrets:
        - name: ghcr-creds
