apps/market-data/sin/ui-apps/fees-editor/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fees-editor
spec:
  selector:
    app: fees-editor
  ports:
    - protocol: TCP
      port: 1234
